--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <section class="hunter section">
         <div class="conteiner">
           <h1 class="hunter-text">Эффективные решения для вашего бизнеса</h1>
-          <button type="button" class="hunter-btn">Заказать услугу</button>
+          <button type="button" class="hunter-btn" data-modal-open>Заказать услугу</button>
         </div>
       </section>
       <!--Преимущества-->
@@ -120,14 +120,17 @@
 
           <ul class="our-work-list list">
             <li class="our-work-item">
+              <div class="thumb-box"><p class="thumb-text">Десктопные приложения</p></div>
               <img src="./images/pc.jpg" alt="работа за компьютером" width="370" />
             </li>
 
             <li class="our-work-item">
+              <div class="thumb-box"><p class="thumb-text">Мобильные приложения</p></div>
               <img src="./images/notebook.jpg" alt="работа за ноутбуком" width="370" />
             </li>
 
             <li class="our-work-item">
+              <div class="thumb-box"><p class="thumb-text">Дизайнерские решения</p></div>
               <img src="./images/tablet.jpg" alt="работа с планшетом" width="370" />
             </li>
           </ul>
@@ -387,6 +390,16 @@
                 </div>
             </div>
         </footer>
+        <div class="backdrop is-hidden" data-modal>
+            <div class="modal">
+                <button type="button" class="modal-close-btn" data-modal-close>
+          <svg class="modal-close-icon" width="18" height="18">
+            <use href="./images/icon.svg#icon-close-black"></use>
+          </svg>
+        </button>
+            </div>
+        </div>
+        <script src="./js/modal.js"></script>
 </body>
 
 </html>
