--- a/portfolio.html
+++ b/portfolio.html
@@ -74,7 +74,16 @@
           <ul class="portfolio list">
             <li class="portfolio-item">
               <a href="#" class="portfolio-link link">
-                <img src="./images/img.jpg" alt="ноутбук" width="370" />
+                <div class="thumb-img">
+                  <img src="./images/img.jpg" alt="ноутбук" width="370" />
+
+                  <p class="portfolio-thumb-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
+                </div>
+
                 <div class="project">
                   <h2 class="portfolio-name">Технокряк</h2>
                   <p class="portfolio-kind">Веб-сайт</p>
@@ -83,7 +92,14 @@
                 </li>
                 <li class="portfolio-item">
                     <a href="#" class="portfolio-link link">
-                        <img src="./images/img1.jpg" alt="два баскетболиста" width="370" />
+                        <div class="thumb-img">
+                            <img src="./images/img1.jpg" alt="два баскетболиста" width="370" />
+
+                            <p class="portfolio-thumb-text">
+                                Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+                            </p>
+                        </div>
+
                         <div class="project">
                             <h2 class="portfolio-name">Постер New Orlean vs Golden Star</h2>
                             <p class="portfolio-kind">Дизайн</p>
@@ -92,7 +108,13 @@
                 </li>
                 <li class="portfolio-item">
                     <a href="#" class="portfolio-link link">
-                        <img src="./images/img(2).jpg" alt="эмблема ресторана" width="370" />
+                        <div class="thumb-img">
+                            <img src="./images/img(2).jpg" alt="эмблема ресторана" width="370" />
+
+                            <p class="portfolio-thumb-text">
+                                Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+                            </p>
+                        </div>
                         <div class="project">
                             <h2 class="portfolio-name">Ресторан Seafood</h2>
                             <p class="portfolio-kind">Приложение</p>
@@ -101,7 +123,13 @@
                 </li>
                 <li class="portfolio-item">
                     <a href="#" class="portfolio-link link">
-                        <img src="./images/img(3).jpg" alt="наушники" width="370" />
+                        <div class="thumb-img">
+                            <img src="./images/img(3).jpg" alt="наушники" width="370" />
+
+                            <p class="portfolio-thumb-text">
+                                Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+                            </p>
+                        </div>
                         <div class="project">
                             <h2 class="portfolio-name">Проект Prime</h2>
                             <p class="portfolio-kind">Маркетинг</p>
@@ -110,7 +138,13 @@
                 </li>
                 <li class="portfolio-item">
                     <a href="#" class="portfolio-link link">
-                        <img src="./images/img(4).jpg" alt="коробки" width="370" />
+                        <div class="thumb-img">
+                            <img src="./images/img(4).jpg" alt="коробки" width="370" />
+
+                            <p class="portfolio-thumb-text">
+                                Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+                            </p>
+                        </div>
                         <div class="project">
                             <h2 class="portfolio-name">Проект Boxes</h2>
                             <p class="portfolio-kind">Приложение</p>
@@ -119,7 +153,13 @@
                 </li>
                 <li class="portfolio-item">
                     <a href="#" class="portfolio-link link">
-                        <img src="./images/img(5).jpg" alt="монитор" width="370" />
+                        <div class="thumb-img">
+                            <img src="./images/img(5).jpg" alt="монитор" width="370" />
+
+                            <p class="portfolio-thumb-text">
+                                Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+                            </p>
+                        </div>
                         <div class="project">
                             <h2 class="portfolio-name">Inspiration has no Borders</h2>
                             <p class="portfolio-kind">Веб-сайт</p>
@@ -128,7 +168,13 @@
                 </li>
                 <li class="portfolio-item">
                     <a href="#" class="portfolio-link link">
-                        <img src="./images/img(6).jpg" alt="книга" width="370" />
+                        <div class="thumb-img">
+                            <img src="./images/img(6).jpg" alt="книга" width="370" />
+
+                            <p class="portfolio-thumb-text">
+                                Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+                            </p>
+                        </div>
                         <div class="project">
                             <h2 class="portfolio-name">Издание Limited Edition</h2>
                             <p class="portfolio-kind">Дизайн</p>
@@ -137,7 +183,13 @@
                 </li>
                 <li class="portfolio-item">
                     <a href="#" class="portfolio-link link">
-                        <img src="./images/img(7).jpg" alt="этикетка lab" width="370" />
+                        <div class="thumb-img">
+                            <img src="./images/img(7).jpg" alt="этикетка lab" width="370" />
+
+                            <p class="portfolio-thumb-text">
+                                Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+                            </p>
+                        </div>
                         <div class="project">
                             <h2 class="portfolio-name">Проект LAB</h2>
                             <p class="portfolio-kind">Маркетинг</p>
@@ -146,7 +198,13 @@
                 </li>
                 <li class="portfolio-item">
                     <a href="#" class="portfolio-link link">
-                        <img src="./images/img(8).jpg" alt="работа за ноутбуком" width="370" />
+                        <div class="thumb-img">
+                            <img src="./images/img(8).jpg" alt="работа за ноутбуком" width="370" />
+
+                            <p class="portfolio-thumb-text">
+                                Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+                            </p>
+                        </div>
                         <div class="project">
                             <h2 class="portfolio-name">Growing Business</h2>
                             <p class="portfolio-kind">Приложение</p>
